# Vergil

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  READMEnesy.MD  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  railway.toml
apps/backend/: main.py
apps/backend/agents/: deployment_agent.py  execution_agent.py  generate_contract_agent.py  orchestration_agent.py  react_agent.py
apps/backend/db/: models.py  repository.py  session.py
apps/backend/event_store/: postgres.py
apps/backend/memory/: context.py
apps/backend/models/: agent_responses.py  contract_agent_responses.py  deployment_agent_responses.py  execution_agent_responses.py  verification_agent_responses.py
apps/backend/prompts/: action.md  common_sense_verification.md  compile_action.md  contract_generation_delegation.md  contract_verification.md  custom_generation.md  deployment_approval.md  deployment_compile_action.md  deployment_delegation.md  deployment_intent.md  deployment_output.md  deployment_prepare_action.md  deployment_request.md  execution_action.md  execution_delegation.md  execution_intent.md  execution_output.md  final_output.md  generate_output.md  generic_action.md  intent_classification.md  reasoning.md
apps/backend/routers/: __init__.py  approval.py  chat.py  contracts.py  data.py  tools.py  transactions.py  wallet.py
apps/frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.grafi-dev  Dockerfile.oz-mcp  Dockerfile.server
(+61 files in other folders)
