[project]
name = "graphite-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=13.7.0",
    "arize-phoenix-client>=1.30.0",
    "fastmcp>=3.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "googlesearch-python>=1.3.0",
    "grafi==0.0.34",
    "grafi-dev>=0.0.7",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "mypy>=1.17.0",
    "pandas>=3.0.1",
    "psycopg2>=2.9.10",
    "py-solc-x>=2.0.4",
    "pycountry>=24.6.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.5",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.42",
    "web3>=7.12.1",
    "z3-solver>=4.12.0",
    "zai-sdk>=0.1.0",
    "asyncpg>=0.30.0",
]
